--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 /CodeComplexityToolSPM/nbproject/private/*
 /CodeComplexityToolSPM/build/*
+/CodeComplexityToolSPM/build/built-jar.properties
