--- a/CodeComplexityToolSPM/nbproject/project.properties
+++ b/CodeComplexityToolSPM/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.itextpdf-5.4.0.jar=D:\\DEV\\itextpdf-5.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.itextpdf-5.4.0.jar}
+    ${file.reference.itextpdf-5.4.0.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
