--- a/CodeComplexityToolSPM/nbproject/project.properties
+++ b/CodeComplexityToolSPM/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.4.0.jar=D:\\DEV\\itextpdf-5.4.0.jar
+file.reference.rs2xml.jar=D:\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.itextpdf-5.4.0.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
